# Disactivity

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  components.json  package-lock.json  package.json  signing.env.example  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
docs/: TAURI_SIGNING.md
scripts/: tauri-build.mjs
src/: App.css  App.tsx  constants.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/slave/: Cargo.toml  build.rs
src-tauri/slave/src/: main.rs
src-tauri/src/: favorites.rs  lib.rs  main.rs  remote_landing.html
src/__tests__/: setup.ts  utils.test.ts
src/components/: discovery-section.tsx  error-boundary.tsx  game-card.tsx  game-details-dialog.tsx  nav-bar.tsx  settings-dialog.tsx  title-bar.tsx  virtual-game-list.tsx
src/components/ui/: badge.tsx  dialog.tsx  pagination.tsx  scroll-area.tsx  tooltip.tsx
src/i18n/: index.ts
src/i18n/locales/: en-US.json  es-ES.json
src/lib/: format-time.ts  game-assets.ts  game-metadata.ts  schedule-idle.ts  settings.ts  use-debounced-value.ts
src/pages/: about-page.tsx  home-page.tsx  remote-page.tsx  settings-page.tsx  slave-popup-page.tsx
src/types/: discovery.ts  schedules.ts
