[package]
name = "disactivity"
version = "0.1.0"
description = "Discord Activity Simulator - Simulate game activity on Discord"
authors = ["holasoyender"]
edition = "2021"
license = "MIT"
repository = "https://github.com/holasoyender/disactivity"
homepage = "https://github.com/holasoyender/disactivity"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "disactivity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
mdns-sd = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tempfile = "3"
keyring = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

