[package]
name = "slave"
version = "0.1.0-1"
edition = "2021"
description = "Disactivity Game Runner Helper"
authors = ["holasoyender"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = false
